缓存 Trinity 路径与环单位证明