@@ -6,27 +6,26 @@ import com.fish_dan_.data_energistics.common.crafting.trinity.planning.plan.Trin
 import appeng.api.stacks.AEKey;
 
 import java.math.BigInteger;
-import java.util.Collections;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 /**
  * Immutable cycle algorithm selection consumed by graph-stage assembly.
  *
- * @param componentIndex owning SCC index
- * @param prefixOrder    one-time residual batches executed before the complete cycle units
- * @param localOrder     compressed executable batches for one repeat unit
- * @param repetitions    positive repeat count applied by graph assembly
- * @param suffixOrder    one-time residual batches executed after every complete cycle unit
- * @param minimumSeed    exact prefix reserve exposed to graph assembly
- * @param initialInputs  exact initial inventory reserved for the selected cycle
- * @param netChange      exact signed aggregate cycle effect
- * @param exportableNet  settled positive outputs proved safe to expose outside the complete cycle block
- * @param scheduleStates bounded search states visited
- * @param mipNanos       deterministic opportunity time plus ojAlgo solver time
- * @param quality        exact proof strength retained by this cycle
- * @param retainedSeed   internal balance that must remain after downstream settlement
+ * @param componentIndex       owning SCC index
+ * @param prefixOrder          one-time residual batches executed before the complete cycle units
+ * @param localOrder           compressed executable batches for one repeat unit
+ * @param repetitions          positive repeat count applied by graph assembly
+ * @param suffixOrder          one-time residual batches executed after every complete cycle unit
+ * @param minimumSeed          exact prefix reserve exposed to graph assembly
+ * @param initialInputs        exact initial inventory reserved for the selected cycle
+ * @param netChange            exact signed aggregate cycle effect
+ * @param exportableNet        settled positive outputs proved safe to expose outside the complete cycle block
+ * @param scheduleStates       bounded search states visited
+ * @param mipNanos             deterministic opportunity time plus ojAlgo solver time
+ * @param quality              exact proof strength retained by this cycle
+ * @param retainedSeed         internal balance that must remain after downstream settlement
+ * @param seedRefinementPasses additional solves required to make the selected route restart-safe
  */
 public record TrinityCycleSelection(
                                     int componentIndex,
@@ -41,41 +40,8 @@ public record TrinityCycleSelection(
                                     int scheduleStates,
                                     long mipNanos,
                                     TrinityPlanQuality quality,
-                                    Map<AEKey, BigInteger> retainedSeed) {
-
-    /**
-     * Validates top-level accounting while trusting the planner-owned collection elements.
-     */
-    public TrinityCycleSelection {
-        if (componentIndex < 0 || prefixOrder == null || localOrder == null || localOrder.isEmpty() ||
-                suffixOrder == null || repetitions == null ||
-                repetitions.signum() <= 0 || minimumSeed == null || initialInputs == null || netChange == null ||
-                exportableNet == null || scheduleStates < 0 || mipNanos < 0L || quality == null ||
-                retainedSeed == null) {
-            throw new IllegalArgumentException("A Trinity cycle selection requires complete exact accounting");
-        }
-        prefixOrder = Collections.unmodifiableList(prefixOrder);
-        localOrder = Collections.unmodifiableList(localOrder);
-        suffixOrder = Collections.unmodifiableList(suffixOrder);
-        minimumSeed = amountsView(minimumSeed, false);
-        initialInputs = amountsView(initialInputs, false);
-        netChange = amountsView(netChange, true);
-        exportableNet = amountsView(exportableNet, false);
-        retainedSeed = amountsView(retainedSeed, false);
-        LinkedHashMap<AEKey, BigInteger> calculatedNet = new LinkedHashMap<>();
-        mergeNet(calculatedNet, prefixOrder, BigInteger.ONE);
-        mergeNet(calculatedNet, localOrder, repetitions);
-        mergeNet(calculatedNet, suffixOrder, BigInteger.ONE);
-        calculatedNet.entrySet().removeIf(entry -> entry.getValue().signum() == 0);
-        if (!calculatedNet.equals(netChange)) {
-            throw new IllegalArgumentException("A Trinity cycle selection order must match its exact net change");
-        }
-        for (Map.Entry<AEKey, BigInteger> export : exportableNet.entrySet()) {
-            if (!netChange.getOrDefault(export.getKey(), BigInteger.ZERO).equals(export.getValue())) {
-                throw new IllegalArgumentException("A Trinity cycle export must equal its settled positive net output");
-            }
-        }
-    }
+                                    Map<AEKey, BigInteger> retainedSeed,
+                                    int seedRefinementPasses) {
 
     /**
      * Compatibility constructor for cycle paths that already carry a complete optimality proof.
@@ -105,7 +71,8 @@ public record TrinityCycleSelection(
                 scheduleStates,
                 mipNanos,
                 TrinityPlanQuality.PROVED_OPTIMAL,
-                Map.of());
+                Map.of(),
+                0);
     }
 
     /**
@@ -137,24 +104,7 @@ public record TrinityCycleSelection(
                 scheduleStates,
                 mipNanos,
                 quality,
-                Map.of());
-    }
-
-    private static void mergeNet(
-                                 Map<AEKey, BigInteger> target,
-                                 List<TrinityVariantFiring> order,
-                                 BigInteger multiplier) {
-        order.forEach(firing -> firing.variant().netChange().forEach(
-                (key, amount) -> target.merge(
-                        key,
-                        amount.multiply(firing.count()).multiply(multiplier),
-                        BigInteger::add)));
-    }
-
-    private static Map<AEKey, BigInteger> amountsView(Map<AEKey, BigInteger> source, boolean signed) {
-        if (source.values().stream().anyMatch(amount -> signed ? amount.signum() == 0 : amount.signum() <= 0)) {
-            throw new IllegalArgumentException("A Trinity cycle selection amount violates its accounting role");
-        }
-        return Collections.unmodifiableMap(source);
+                Map.of(),
+                0);
     }
 }
